# Gruppe-D

./: CMakeLists.txt  developer.c  developer.h  developer_group.c
include/: developer.h  developer_group.h
src/: developer.c  developer_group.c  main.c
